--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,27 @@
+amqp==5.0.2
 asgiref==3.3.1
+billiard==3.6.3.0
+celery==5.0.5
+click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.1.6
 Django==3.1.4
+django-debug-toolbar==3.2
+django-seed==0.2.2
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.6.0
+Faker==5.0.1
+kombu==5.0.2
+prompt-toolkit==3.0.8
 psycopg2==2.8.6
 PyJWT==1.7.1
+python-dateutil==2.8.1
 python-decouple==3.3
 pytz==2020.4
+redis==3.5.3
+six==1.15.0
 sqlparse==0.4.1
+text-unidecode==1.3
+vine==5.0.0
+wcwidth==0.2.5
