--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
 
   celeryworker:
     build: .
-    command: celery -A test_rocketdata worker
+    command: celery -A rocketdata worker
     volumes:
       - .:/usr/src/rd_test
     depends_on:
@@ -39,7 +39,7 @@ services:
 
   celerybeat:
     build: .
-    command: celery -A test_rocketdata beat
+    command: celery -A rocketdata beat
     volumes:
       - .:/usr/src/rd_test
     depends_on:
@@ -50,7 +50,3 @@ services:
 volumes:
   postgres_data:
   celery_data:
-
-
-
-
