--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,49 +3,38 @@ version: '3.8'
 services:
   rd_app:
     build: .
-    command: python3 /usr/src/rd_test/manage.py runserver 0.0.0.0:8080
-    volumes:
-      - .:/usr/src/rd_test
+    command: sh -c "python3 manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8080"
     ports:
       - 8080:8080
     depends_on:
       - rd_db
-      - rd_app_migrate
       - redis
-
-  rd_app_migrate:
-    build: .
-    command: python3 /usr/src/rd_test/manage.py migrate
-    volumes:
-      - .:/usr/src/rd_test
 
   rd_db:
     image: postgres:10.1-alpine
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - rd_test_data_postgres:/usr/src/rd_test/postgres
 
   redis:
     image: redis:5-alpine
+    volumes:
+      - rd_test_data_redis:/usr/src/rd_test/redis
 
   celeryworker:
     build: .
     command: celery -A rocketdata worker
-    volumes:
-      - .:/usr/src/rd_test
     depends_on:
-      - rd_app_migrate
       - rd_app
       - redis
 
   celerybeat:
     build: .
     command: celery -A rocketdata beat
-    volumes:
-      - .:/usr/src/rd_test
     depends_on:
-      - rd_app_migrate
       - rd_app
       - redis
 
 volumes:
-  postgres_data: /home/suph4rd/PycharmProjects/rd_test/db
+  rd_test_data_postgres:
+  rd_test_data_redis:
