--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-seed==0.2.2
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.6.0
 Faker==5.0.1
+gunicorn==20.0.4
 kombu==5.0.2
 prompt-toolkit==3.0.8
 psycopg2==2.8.6
