--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ click==7.1.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.1.6
-Django==3.1.4
-django-debug-toolbar==3.2
+django>=3.1.12
+django-debug-toolbar>=3.2.1
 django-seed==0.2.2
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.6.0
